# Open-AutoGLM

./: .env.example  .gitignore  Makefile  main.py  pyproject.toml
phone_agent/: agent.py
phone_agent/adb/: __init__.py  device.py
phone_agent/config/: apps.py
scripts/: real_tap.py
