[project]
name = "phone-agent"
version = "0.1.0"
description = "AI-powered phone automation framework"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Zhipu AI" }]
requires-python = ">=3.10"
keywords = ["ai", "phone", "automation", "agent", "glm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "Pillow>=12.0.0",
    "httpx[socks]>=0.28.1",
    "openai>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pre-commit>=4.5.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
# Note: deploy dependencies have version conflicts with openai>=2.9.0
# Install manually if needed:
#   uv pip install sglang vllm transformers
# deploy = [
#     "sglang>=0.5.6.post1",
#     "vllm>=0.12.0",
#     "transformers>=5.0.0rc0",
# ]

[project.scripts]
phone-agent = "main:main"

[project.urls]
Homepage = "https://github.com/THUDM/Open-AutoGLM"
Repository = "https://github.com/THUDM/Open-AutoGLM"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pre-commit>=4.5.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

